--- a/webclient/public/stylesheets/webyast-modal-dialog.css
+++ b/webclient/public/stylesheets/webyast-modal-dialog.css
@@ -17,6 +17,7 @@
  *#++ */
 
 #modalWindow {
+  font-family: Helvetica,Arial,sans-serif;
   position:absolute; 
   z-index:1001;
   border: 2px solid #666;
