--- a/plugins/firewall/app/views/firewall/index.rhtml
+++ b/plugins/firewall/app/views/firewall/index.rhtml
@@ -32,25 +32,26 @@
   <%= render :partial => 'shared/missing_write_permissions' if disabled %>
   <% form_tag '/firewall/update', {:id=>'firewallForm', :class => 'container', :onsubmit => "return validateNeededServices()" } do %>
 
-  <div class="plugin-header">
-    <div class="left">
+  <div id="firewallbar" class="plugin-header">
+    <div class="left" style="float:left">
       <label class="plugin-icon-container"><img class="plugin-icon" src="/icons/firewall.png"></label>
       <label class="plugin-name">Firewall</label><span id="questionMark" style="margin:0px 15px; float:none;">?</span>
     </div>
 
     <div class="right" >
-	  <span class="right" style="padding:2px; background:#fff; -moz-border-radius:2px; -webkit-border-radius:1px;">
-	  <% if @firewall.use_firewall %>
-	    <button id="on" class="active" value="on"><%=_("Enabled")%></button>
-	    <button id="off" value="off"><%=_("Disabled")%></button>
-	  <% else %>
-	    <button id="on" value="on"><%=_("Enabled")%></button>
-	    <button id="off" class="active" value="off"><%=_("Disabled")%></button>
-	  <% end %>
-	  </span>
-	</div>
-	<div class="clearfix"></div>
+      <span class="right" style="padding:2px; background:#f5f5f5; -moz-border-radius:2px; -webkit-border-radius:2px;">
+	<% if @firewall.use_firewall %>
+	  <button id="on" class="active" value="on"><%=_("Enabled")%></button>
+	  <button id="off" value="off"><%=_("Disabled")%></button>
+	<% else %>
+	  <button id="on" value="on"><%=_("Enabled")%></button>
+	  <button id="off" class="active" value="off"><%=_("Disabled")%></button>
+	<% end %>
+     </span>
+    </div>
+    <div class="clearfix"></div>    
   </div>
+  
   
   <div id="fw_services_values">
     <% @firewall.fw_services.each do |service| %>
@@ -61,10 +62,8 @@
              />
     <% end %>
   </div>
-  <input type="checkbox" name="use_firewall" id="use_firewall" value="true" 
-      <%=  "checked=\"checked\"" if @firewall.use_firewall %>   
-      <%=  "disabled=\"disabled\"" if disabled %>  
-  /> 
+
+  <input type="checkbox" name="use_firewall" id="use_firewall" value="true" <%=  "checked=\"checked\"" if @firewall.use_firewall %> <%=  "disabled=\"disabled\"" if disabled %> /> 
     
 <!--  <div id="firewall" class="border">
     <% if @firewall.use_firewall %>
