--- a/plugins/status/app/views/status/_status_summary.html.erb
+++ b/plugins/status/app/views/status/_status_summary.html.erb
@@ -21,31 +21,52 @@
 #++
 %>
 <% unauthorized =  error.class == ActiveResource::UnauthorizedAccess -%>
-
-<div class="status_status">
-  <% link_to (unauthorized ? "controlpanel" : "status") do %>
+<div class="statusbar_row">
+  <a href="status">
     <%= report_error(error, _("An problem occured when loading status information.")) if error && !unauthorized %>
-    <% unless status.blank? %>
-      <span class="status-icon <%= level %>">&nbsp;</span>
-      <span><%= status %></span>
-    <% else %>
-      <% if unauthorized -%>
-	<span class="status-icon warning">&nbsp;</span>
-        <span><%= _("Cannot read system status - you have been logged out.") %></span> <!-- RORSCAN_ITL -->
-      <% elsif !error %>
-	<span class="status-icon ok">&nbsp;</span>
-        <span><%= _("Your system is healthy.") %></span> <!-- RORSCAN_ITL -->
-      <% end %>
-    <% end %>
-  <% end %>
+  </a>
 </div>
+
+<% unless status.blank? %>
+  <% javascript_tag do -%>jQuery(function($){ $('#status-eye').addClass('eye_warning'); });<% end -%>
+
+  <% status.split(';').each do | warning | %>
+  <div class="statusbar_row">
+<!--     <img src="/images/status-warning.png"> -->
+    <span class="status_warning">!</span>
+    <a href="status">
+      <span><%= warning %></span>
+    </a>
+  </div>
+  <% end %>
+  
+<% else %>
+  <% if unauthorized -%>
+    <div class="statusbar_row">
+      <span class="status-icon warning">&nbsp;</span>
+      <a href="status">
+	<span><%= _("Cannot read system status - you have been logged out.") %></span> <!-- RORSCAN_ITL -->
+      </a>
+    </div>
+  <% elsif !error %>
+    <% javascript_tag do -%>jQuery(function($){ $('#status-eye').addClass('eye_healthy'); });<% end -%>
+
+    <div class="statusbar_row">
+      <span class="status-icon ok">&nbsp;</span>
+      <a href="status">
+	<span><%= _("Your system is healthy.") %></span> <!-- RORSCAN_ITL -->
+      </a>
+    </div>
+  <% end %>
+<% end %>
+
 
 <% if refresh_timeout.to_i > 0 && !unauthorized -%>
   <!-- refresh the status again after a timeout -->
   <% javascript_tag do -%>
     setTimeout(function() {
-      $('#status_status').html('<%= image_tag("/images/working.gif", :class => "small-working-icon") %> <%= _("Loading system information") %>') <!-- RORSCAN_ITL -->
-      <%= remote_function(:update => "status_status",
+      $('#statusbar-status').html('<%= image_tag("/images/working.gif", :class => "small-working-icon") %> <%= _("Loading system information") %>') <!-- RORSCAN_ITL -->
+      <%= remote_function(:update => "statusbar_status",
 	:url => { :controller => :status, :action => :show_summary, :background => true }) %>
       }, <%= refresh_timeout.to_i * 1000 -%>);
   <% end -%>
