--- a/webclient/public/stylesheets/webyast-firewall.css
+++ b/webclient/public/stylesheets/webyast-firewall.css
@@ -21,9 +21,6 @@
 #firewallbar div.left, span.left { float:left; overflow:hidden; }
 #firewallbar div.right, span.right { float:right; overflow:hidden; }
 
-
-/* #firewallbar button::-moz-focus-inner { border:0; padding:0; } */
-
 #on, #off { 
   padding:2px 5px; 
   border:1px solid #a0a0a0; 
@@ -112,7 +109,7 @@
   text-shadow: 0px 1px 0px #f5f5f5; 
 }
 
-#allowedContainer, #blockedContainer { font-size:13px; background-color: #fff; width:47%; margin-bottom:10px;}
+#allowedContainer, #blockedContainer { font-size:13px; width:47%; margin-bottom:10px;}
 #allowedContainer, #rolesContainer { float:left; }
 #blockedContainer, #usersContainer { float:right; }
 #allowed_services, #blocked_services { padding:0px 5px 0px 3px; }
