--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -18,99 +18,96 @@
 # To contact Novell about this file by physical or electronic mail,
 # you may find current contact information at www.novell.com
 -->
-<% unless JSMIN == true %>  
-<%= javascript_include_tag "webyast-network" %>
-<%= javascript_include_tag "customInput.jquery" %>
-<%= stylesheet_link_tag "customInput" %>
-<%= stylesheet_link_tag "webyast-network" %>
-<% end %>
 
 <% content_for :head do %> 
-<script type="text/javascript">
-$(document).ready(function() {
-  validateIPv4("ip");
-  validateSubnetMask("netmask"); //accept prefixlen and common subnet mask format e.g. 255.255.255.0
-  validateHostName("hostname");
-  validateDefaultRoute("default_route");
-  validateDomainNameWithAndWithoutTLD("domain");
-  validateNameservers("nameservers");
-  validateDomainNameWithAndWithoutTLD("searchdomains");
+  <% unless JSMIN == true %>  
+    <%= javascript_include_tag "webyast-network" %>
+    <%= stylesheet_link_tag "webyast-network" %>
+  <% end %>
 
-  $("#dnsForm").validate({ 
-    onkeyup: function(element) { this.element(element); }, 
-    onblur: true,
-    rules:{
-      ip: {
-	ip: true,
-	required:true
-      },
-      netmask:{
-	netmask: true,
-	required:true
-      },
-      default_route: {
-	    default_route: true,
-	    required:true
-      },
-      hostname: { 
-	required: true,
-	hostname:true
-      },
-      domain: {
-	    domain: true,
-	    required:true
-      },
-      nameservers: {
-	    nameservers: true,
-	    required:true
-      },
-      searchdomains: {
-	    searchdomains: true,
-	    required:true
-      }
-    },
+  <script type="text/javascript">
+  $(document).ready(function() {
+    validateIPv4("ip");
+    validateSubnetMask("netmask"); //accept prefixlen and common subnet mask format e.g. 255.255.255.0
+    validateHostName("hostname");
+    validateDefaultRoute("default_route");
+    validateDomainNameWithAndWithoutTLD("domain");
+    validateNameservers("nameservers");
+    validateDomainNameWithAndWithoutTLD("searchdomains");
 
-    messages: {
-	    ip: {
-		  required: <%= jss _("This field is required") -%>,
-		  ip: <%= jss _("Enter a valid IP address") -%>
-	    },
-	    netmask: {
-		  required: <%= jss _("This field is required") -%>,
-		  netmask: <%= jss _("Enter a valid subnet mask or prefix") -%>
-	    },
-	    default_route: {
-		  required: <%= jss _("This field is required") -%>,
-		  default_route:<%= jss _("Enter a valid IP address") -%>
-	    },
+    $("#dnsForm").validate({ 
+      onkeyup: function(element) { this.element(element); }, 
+      onblur: true,
+      rules:{
+	ip: {
+	  ip: true,
+	  required:true
+	},
+	netmask:{
+	  netmask: true,
+	  required:true
+	},
+	default_route: {
+	      default_route: true,
+	      required:true
+	},
+	hostname: { 
+	  required: true,
+	  hostname:true
+	},
+	domain: {
+	      domain: true,
+	      required:true
+	},
+	nameservers: {
+	      nameservers: true,
+	      required:true
+	},
+	searchdomains: {
+	      searchdomains: true,
+	      required:true
+	}
+      },
 
-	    hostname:{ 
-	      required: <%= jss _("This field is required") -%>,
-	      hostname: <%= jss _("Enter a valid hostname") -%> 
-	    },
+      messages: {
+	      ip: {
+		    required: <%= jss _("This field is required") -%>,
+		    ip: <%= jss _("Enter a valid IP address") -%>
+	      },
+	      netmask: {
+		    required: <%= jss _("This field is required") -%>,
+		    netmask: <%= jss _("Enter a valid subnet mask or prefix") -%>
+	      },
+	      default_route: {
+		    required: <%= jss _("This field is required") -%>,
+		    default_route:<%= jss _("Enter a valid IP address") -%>
+	      },
 
-	    domain:{
-		  required: <%= jss _("This field is required") -%>,
-		  domain: <%= jss _("Enter a valid domain name") -%> 
-	    },
-	    nameservers: {
-		  required: <%= jss _("This field is required") -%>,
-		  nameservers: <%= jss _("Enter a valid IP address") -%>
-	    },
-	    searchdomains: {
-		  required: <%= jss _("This field is required")  -%>,
-		  searchdomains: <%= jss _("Enter a valid domain name") -%> 
-	    }
-    },
-    submitHandler: function(form) {
-// 	  var message = <%= jss _("Please wait") -%>;
-// 	  disableFormOnSubmit(message);
-	  var message = <%= jss _("Please wait") -%>;
-	  $.modalDialog.wait( {message: message});
-	  form.submit();
-    },
-    success: "valid"  
-  });
+	      hostname:{ 
+		required: <%= jss _("This field is required") -%>,
+		hostname: <%= jss _("Enter a valid hostname") -%> 
+	      },
+
+	      domain:{
+		    required: <%= jss _("This field is required") -%>,
+		    domain: <%= jss _("Enter a valid domain name") -%> 
+	      },
+	      nameservers: {
+		    required: <%= jss _("This field is required") -%>,
+		    nameservers: <%= jss _("Enter a valid IP address") -%>
+	      },
+	      searchdomains: {
+		    required: <%= jss _("This field is required")  -%>,
+		    searchdomains: <%= jss _("Enter a valid domain name") -%> 
+	      }
+      },
+      submitHandler: function(form) {
+	var message = <%= jss _("Please wait") -%>;
+	$.modalDialog.wait( {message: message});
+	form.submit();
+      },
+      success: "valid"  
+    });
   });
   </script>
 <% end %>
@@ -146,11 +143,8 @@ $(document).ready(function() {
 
       <div class="clearfix">&nbsp;</div>
 
-      <div id="dns-container" style="margin:10px auto; position:relative; float:none; width:96%; padding:0px; border: 1px solid #d8d8d8; -moz-border-radius:3px; ">
-	<div style=" line-height:30px; vertical-align:middle; color:#444; background: -moz-linear-gradient(top, #e0e0e0 0%, #ccc 100%);  vertical-align:middle; 
-	    -moz-border-radius-bottomleft:5px; -moz-border-radius:2px; border-bottom: 1px solid #d8d8d8;  -moz-border-radius:0px;
-	    background: -moz-linear-gradient(center bottom , #e4e4e4, #ededed) repeat scroll 0 0 transparent; color:#555555; -moz-border-radius-bottomright:0px; -moz-border-radius-bottomleft:0px; padding:0px;" >
-	  
+      <div id="dns-container">
+	<div id="dns-container-header" >
 	   <span style="float:none; margin-left:5px; -moz-border-radius:0px; padding:0px 5px; text-shadow: 1px 1px #fdfdfd; display:inline-block;">
 	    <b ><%= _("DNS configuration")%></b>
 	    <span style="float:none; color:#777777; font-size:10px; margin-left:2px;">(manual)</span>
@@ -180,47 +174,30 @@ $(document).ready(function() {
 	    <%=text_field_tag :searchdomains, @searchdomains.join(" "), :class=>"searchdomains", :disabled => write_disabled %>
 	  </div>
 
-	  <div id="ip_sticker" class="right" style="border:1px solid #ebebeb; color:#666; position:absolute; top:31%; height:30%; right:2%; text-align:center; padding:0px; -moz-border-radius:3px; ">
+	  <div id="ip_sticker" class="right">
 	    <span>
 	      <span style="display:block; background:#eee; padding:2px 3px; font-size:11px;"><%=_("Current IP address (DHCP)")%></span>
-	      <span style="font-size:20px;"><%= @dhcp_ip %></span>
+	      <span style="font-size:20px; padding:5px 0px;"><%= @dhcp_ip %></span>
 	    </span>
 	  </div>
 
-<!-- 	  <div style="height:1px; margin:10px 0; background: -moz-linear-gradient(left, #f2f2f2 0%, #ddd 25%, #ddd 75%, #f2f2f2 100%);  padding:0px;">&nbsp;</div> -->
-	  <div style="height:1px; margin:10px 0; background: -moz-linear-gradient(left, #ddd 0%, #f2f2f2 100%);  padding:0px;">&nbsp;</div>
-
-	  <div class="row manual dhcp">
+	  <div class="row manual">
 	    <label><%=_("Change hostname by DHCP")%></label>
-	    <label id="label_dhcp_hostname" style="width:1px;" for="<%= :dhcp_hostname %>">&nbsp;</label>
 	    <%= check_box_tag :dhcp_hostname, "1", @dhcp_hostname , :disabled=>@dhcp_hostname_enabled %>
-	  
-	    <!-- DON'T FORGET TO SET IT WITH JQUERY!!!!! -->
 	    <input type="hidden" for="dhcp_hostname" name="dhcp_hostname_enabled" value="<%= @dhcp_hostname_enabled %>"/>
 	  </div>
 	</div>
       </div>
-<!-- <label for="ip" generated="true" class="error">Enter a valid IP address</label> -->
-<!--       <div class="clearfix">&nbsp;</div> -->
 
-      <div id="ip-container" style="margin:10px auto; position:relative;  float:none; width:96%; padding:0px; border: 1px solid #d8d8d8; -moz-border-radius:3px; ">
-	<div style=" line-height:30px; vertical-align:middle; color:#444; background: -moz-linear-gradient(top, #e0e0e0 0%, #ccc 100%);  vertical-align:middle; 
-	    -moz-border-radius-bottomleft:5px; -moz-border-radius:2px; border-bottom: 1px solid #d8d8d8;  -moz-border-radius:0px;
-	    background: -moz-linear-gradient(center bottom , #e4e4e4, #ededed) repeat scroll 0 0 transparent; color:#555555; -moz-border-radius-bottomright:0px; -moz-border-radius-bottomleft:0px; padding:0px;" >
-	  
+      <div id="ip-container">
+	<div id="ip-container-header" >
 	  <span style="float:none; margin-left:5px; -moz-border-radius:0px; padding:0px 5px; text-shadow: 1px 1px #f8f8f8; display:inline-block;">
 	    <b style="text-shadow: 1px 1px #fdfdfd;"><%= _("IP configuration")%></b>
 	    <span style="float:none; color:#777777; font-size:10px; margin-left:2px;">(via DHCP server)</span>
-<!-- 	  <span style="float:none; color:#555; font-size:10px; margin-left:2px;"></span></span> -->
 	  </span>
 	</div>
 
 	<div id="ip-content" style="padding:10px;">
-	  <!--<div class="row dhcp">
-	    <label for="<%= :ip %>"><%=_("Current IP address")%></label>
-	    <%= @dhcp_ip %>
-	  </div>-->
-	  
 	  <div class="row auto">
 	    <label for="<%= :ip %>"><%=_("IP address")%></label>
 	    <%=text_field_tag :ip, @ip, :class=>"ip static", :disabled => write_disabled %>
@@ -244,14 +221,4 @@ $(document).ready(function() {
 	  <%= form_send_buttons :disabled => write_disabled %>
 	</div>
       </div>
-  <% end %>
-  <!--<div class="right" style="padding: 10px; font-size:11px; color:#555; width:30%; border: 1px solid #d8d8d8; -moz-border-radius:3px; ">
-	  <b>DNS confuguration examples:</b>
-	  <ul>
-	    <li>Hostname: webyast</li>
-	    <li>Domain: suse.de</li>
-	    <li>Name servers: 192.168.0.1</li>
-	    <li>Search domains: suse.de</li>	
-	  </ul>
-	</div>-->
-
+  <% end %>  
