--- a/plugins/status/app/views/status/_status_summary.html.erb
+++ b/plugins/status/app/views/status/_status_summary.html.erb
@@ -29,7 +29,6 @@
 
 <% unless status.blank? %>
   <% javascript_tag do -%>jQuery(function($){ $('#status-eye').addClass('eye_warning'); });<% end -%>
-
   <% status.split(';').each do | warning | %>
   <div class="statusbar_row">
 <!--     <img src="/images/status-warning.png"> -->
@@ -49,7 +48,7 @@
       </a>
     </div>
   <% elsif !error %>
-    <% javascript_tag do -%>jQuery(function($){ $('#status-eye').addClass('eye_healthy'); });<% end -%>
+    <% javascript_tag do -%>jQuery(function($){ if($('#status-eye').hasClass("eye_warning") == false) { $('#status-eye').addClass('eye_healthy'); } });<% end -%>
 
     <div class="statusbar_row">
       <span class="status-icon ok">&nbsp;</span>
@@ -68,6 +67,6 @@
       $('#statusbar-status').html('<%= image_tag("/images/working.gif", :class => "small-working-icon") %> <%= _("Loading system information") %>') <!-- RORSCAN_ITL -->
       <%= remote_function(:update => "statusbar_status",
 	:url => { :controller => :status, :action => :show_summary, :background => true }) %>
-      }, <%= refresh_timeout.to_i * 1000 -%>);
+      }, <%= refresh_timeout.to_i * 1 -%>);
   <% end -%>
 <% end %>
