--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -26,6 +26,9 @@
   <% end %>
 
   <script type="text/javascript">
+  var AUTH_TOKEN = 'authenticity_token=' + encodeURIComponent("<%= escape_javascript form_authenticity_token %>");
+  startNotifier({'module':'network', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
+
   $(document).ready(function() {
     validateIPv4("ip");
     validateSubnetMask("netmask"); //accept prefixlen and common subnet mask format e.g. 255.255.255.0
