- fixed path to plugin icon in status module

--- a/plugins/status/app/views/status/_status_summary.html.erb
+++ b/plugins/status/app/views/status/_status_summary.html.erb
@@ -32,7 +32,7 @@
   <% status.split(';').each do | warning | %>
   <div class="statusbar_row">
 <!--     <img src="/images/status-warning.png"> -->
-    <span class="status_warning">!</span>
+    <span class="status_warning"></span>
     <a href="status">
       <span><%= warning %></span>
     </a>
