--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -53,7 +53,7 @@
 
 <!--<%= javascript_include_tag :defaults %>-->
 
-<div class='plugin-icon'><img alt="monitoring" src='/images/monitoring.png' width="48px" height="48"/><%=_("Status")%></div>
+<div class='plugin-icon'><img alt="monitoring" src='/icons/monitoring.png' width="48px" height="48"/><%=_("Status")%></div>
 <div class="plugin-content">
 
 <div class="accordion">
