- UI improvment control panel

--- a/webclient/public/stylesheets/webyast-controlpanel.css
+++ b/webclient/public/stylesheets/webyast-controlpanel.css
@@ -98,7 +98,7 @@ div.statusbar_row span.status_warning {
   -moz-border-radius:100%;  
   line-height:12px; 
   background: -moz-linear-gradient(center bottom , #b43434, #ea5656) repeat scroll 0 0 transparent;
-  background: -moz-radial-gradient(center center 45deg, circle closest-side, #ea5656 0%, #b43434 100%) repeat scroll 0 0 transparent;
+  background: -moz-radial-gradient(center center 45deg, circle closest-side, #ea5656 0%, #7b3232 100%) repeat scroll 0 0 transparent;
   font-size:18px; 
   font-weight:bolder; 
   color:white; 
