--- a/plugins/ldap/app/views/ldap/index.html.erb
+++ b/plugins/ldap/app/views/ldap/index.html.erb
@@ -23,7 +23,9 @@
 
   <%= javascript_include_tag "validation.js" %>
   <script type="text/javascript">
-  
+    var AUTH_TOKEN = 'authenticity_token=' + encodeURIComponent("<%= escape_javascript form_authenticity_token %>");
+    startNotifier({'module':'ldap', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
+
     $(document).ready(function() {
       validateDomainNameWithPortNumber("server");
 
@@ -74,7 +76,7 @@
 
 <% disabled = !@permissions[:write] %>
 
-<div class='plugin-icon'><img src='../icons/yast-ldap.png'/> <%= _("LDAP client") %></div>
+<div class='plugin-icon'><img src='../icons/yast-ldap.png'/> <%= _("LDAP client") %><span id="questionMark">?</span></div>
 <div class='plugin-content'>
 
 <%= render :partial => 'shared/missing_write_permissions' if disabled %>
