--- a/plugins/registration/app/views/registration/index.rhtml
+++ b/plugins/registration/app/views/registration/index.rhtml
@@ -70,7 +70,7 @@
   <% end %>
 <% end %>
 
-<div class='plugin-icon'><img src='/icons/yast-product-registration.png' alt="<%= _("register plugin") %>"/><%=_("Registration")%></div>
+<div class='plugin-icon'><img src='/icons/yast-product-registration.png' alt="<%= _("register plugin") %>"/><%=_("Registration")%><span id="questionMark">?</span></div>
 
 <div class='plugin-content' style="padding-top: 8px">
 
