--- a/plugins/roles/app/views/roles/index.rhtml
+++ b/plugins/roles/app/views/roles/index.rhtml
@@ -21,7 +21,7 @@
 #++
 %>
 
-<div class='plugin-icon'><img src='/icons/yast-permissions.png' alt="Roles module"/><%=_("Roles")%></div>
+<div class='plugin-icon'><img src='/icons/yast-permissions.png' alt="Roles module"/><%=_("Roles")%><span id="questionMark">?</span></div>
 <div class="plugin-content">
   <div id="create_role_dialog" style="display: none">
     <% form_tag '/roles/create', {:id=>'rolesForm', :class => 'container'} do %>
@@ -139,6 +139,9 @@
   <% end %>
 
   <script type="text/javascript">
+    var AUTH_TOKEN = 'authenticity_token=' + encodeURIComponent("<%= escape_javascript form_authenticity_token %>");
+    startNotifier({'module':'roles', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
+
     $(document).ready(function(){
       function validateRoleName(name) {
 	jQuery.validator.addMethod(name, function(value, element) {
