--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -38,6 +38,9 @@
 
 <% content_for :before_script do %>
   <% javascript_tag do %>
+    var AUTH_TOKEN = 'authenticity_token=' + encodeURIComponent("<%= escape_javascript form_authenticity_token %>");
+    startNotifier({'module':'status', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
+
     $(document).ready(function() {
       $(".accordion").accordion({
         autoHeight : false,
@@ -53,7 +56,7 @@
 
 <!--<%= javascript_include_tag :defaults %>-->
 
-<div class='plugin-icon'><img alt="monitoring" src='/icons/monitoring.png' width="48px" height="48"/><%=_("Status")%></div>
+<div class='plugin-icon'><img alt="monitoring" src='/icons/monitoring.png' width="48px" height="48"/><%=_("Status")%><span id="questionMark">?</span></div>
 <div class="plugin-content">
 
 <div class="accordion">
