--- a/plugins/time/app/views/time/index.rhtml
+++ b/plugins/time/app/views/time/index.rhtml
@@ -141,7 +141,7 @@
   <% end -%>
 <% end %>
 
-<div class='plugin-icon'><img src='/icons/yast-ntp-client.png' alt="time module"/><%=_("Time")%></div>
+<div class='plugin-icon'><img src='/icons/yast-ntp-client.png' alt="time module"/><%=_("Time")%><span id="questionMark">?</span></div>
 
 <div class="plugin-content">
 <%= render :partial => 'shared/missing_write_permissions' if disabled %>
