--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -60,6 +60,9 @@
  </style>
 
  <% javascript_tag do %>
+  var AUTH_TOKEN = 'authenticity_token=' + encodeURIComponent("<%= escape_javascript form_authenticity_token %>");
+  startNotifier({'module':'users', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
+
  jQuery.expr[':'].Contains = function(a, i, m) {
   return jQuery(a).text().toUpperCase().indexOf(m[3].toUpperCase()) >= 0;
  };
@@ -186,7 +189,7 @@
 <% end %>
 
 <% end %>
-<div class='plugin-icon'><img alt="yast-users" src='/icons/yast-users.png'/><%=_("Users")%></div>
+<div class='plugin-icon'><img alt="yast-users" src='/icons/yast-users.png'/><%=_("Users")%><span id="questionMark">?</span></div>
 <div class="plugin-content">
 
 <div id="search-userbar">
