--- a/webclient/public/stylesheets/webyast-controlpanel.css
+++ b/webclient/public/stylesheets/webyast-controlpanel.css
@@ -2,18 +2,18 @@
 #--
 # Webyast Webservice framework
 #
-# Copyright (C) 2009, 2010 Novell, Inc. 
+# Copyright (C) 2009, 2010 Novell, Inc.
 #   This library is free software; you can redistribute it and/or modify
 # it only under the terms of version 2.1 of the GNU Lesser General Public
-# License as published by the Free Software Foundation. 
+# License as published by the Free Software Foundation.
 #
 #   This library is distributed in the hope that it will be useful, but WITHOUT
 # ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
-# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more 
-# details. 
+# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
+# details.
 #
 #   You should have received a copy of the GNU Lesser General Public
-# License along with this library; if not, write to the Free Software 
+# License along with this library; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 #++
 */
@@ -27,62 +27,68 @@
 }
 
 #status-eye {
-  height:112px; 
-  width:112px; 
-  line-height:112px; 
+  height:112px;
+  width:112px;
+  line-height:112px;
   margin:2px 0;
   float:left;
-  border:4px solid #ccc; 
+  border:4px solid #ccc;
   overflow:hidden;
 
-  
   -moz-box-shadow: 0px 0px 1px #666, 0px 0px 10px #888;
-  
-  /* SQUARE   */
-  -moz-border-radius:10px; 
-  /*ROUND*/
-  -moz-border-radius:100%;  
 
-  
-  background: -moz-radial-gradient(center 45deg, circle closest-side, #eee 0%, #474747 100%) transparent;   
-  
+  /* SQUARE   */
+  -moz-border-radius:10px;
+  /*ROUND*/
+  -moz-border-radius:100%;
+
+  background: -moz-radial-gradient(center 45deg, circle closest-side, #eee 0%, #474747 100%) transparent;
+
 }
 
 #status-eye.eye_healthy {
-  /*GREEN*/
-  background: -moz-radial-gradient(center 45deg, circle closest-side, #68b400 0%, #474747 100%) transparent;   
+  background: -moz-radial-gradient(center 45deg, circle closest-side, #68b400 0%, #474747 100%) transparent;
 }
 
 #status-eye.eye_warning {
-/*RED */
   background: -moz-radial-gradient(center 45deg, circle closest-side, red 0%, #474747 99%)
 }
 
 div.statusbar_header {
-  border-bottom:1px dotted #ddd;
+  border-bottom:0px dotted #ddd;
   height:20px;
   padding:0px 5px 0px 0px;
   vertical-align:middle;
+  margin: 0 0 5px 0;
 }
 
-div.statusbar_header label { vertical-align:middle; font-size:14px; font-weight:bold; color:#444; text-shadow: 0 1px 0 #f5f5f5; }
+div.statusbar_header label {
+    vertical-align:middle;
+    font-size:14px;
+    font-weight:bold;
+    color:#444;
+    text-shadow: 0 1px 0 #f5f5f5;
+}
 
 #statusbar_status_container {
   float:left;
-  width:24%;
+  width:28%;
   margin:20px 0;
-  padding:5px 5px 5px 20px;
-  min-height:50px; 
+  padding:0px 5px 0px 20px;
+  min-height:50px;
 }
 
 #statusbar_patches_container {
   float:left;
-  width:24%;
-  margin:20px;
-  padding:5px 5px 5px 20px;
-  border-left:1px solid #eee;
-  margin-left:5px;
-  min-height:50px; 
+  width:22%;
+
+  padding:0px 5px;
+
+  border-left:0px solid #eee;
+  border-right:0px solid #eee;
+
+  margin:20px 5px;
+  min-height:50px;
 }
 
 #statusbar-actions {
@@ -91,58 +97,65 @@ div.statusbar_header label { vertical-align:middle; font-size:14px; font-weight:
   margin:20px 0;
   margin-right:10px;
   border:4px solid #eee;
-  padding:5px; 
-  min-height:50px; 
+  padding:5px;
+  min-height:50px;
   -moz-border-radius:5px;
 }
 
 div.statusbar_row { line-height:26px; vertical-align:middle; }
-div.statusbar_row span { font-size:12px; font-weight:normal; border-bottom:1px dotted #666;}
 div.statusbar_row input { margin:5px 0; }
 
 div.statusbar_row a.button { width:100%; display:inline-block; margin:3px 0; text-align:center; line-height:18px; }
 
-div.statusbar_row span.update_button { vertical-align:middle; border:none; float:right; clear:left; }
+
+div.statusbar_row a.warning_message {
+  font-weight: normal;
+  font-size: 12px;
+  padding-left:3px;
+  border-bottom:1px dotted #666;
+}
+
+
+
+div.update_all input{
+    width:100%;
+}
+div.statusbar_row span.update_button {
+    vertical-align:middle;
+    #border:none;
+    #float:right;
+    clear:left;
+}
 div.statusbar_row img.small-working-icon { vertical-align: middle; }
 div.statusbar_row img { display:inline-block; height:22px; width:22px; margin-right:5px; vertical-align:middle; }
 div.statusbar_row label { margin-left: 5px; vertical-align: middle; }
-div.statusbar_row span.status_warning {
+
+.status_ok, .status_warning {
   margin-right:5px;
-  display:inline-block; 
-  width:12px; 
-  height:12px; 
-  padding:4px; 
-  border:none; 
+  display:inline-block;
+  border:2px solid #eee;
+  width:20px;
+  height:20px;
+  padding:0px;
   text-align:center;
   vertical-align:middle;
-  -moz-border-radius:100%;  
-  line-height:12px; 
-  background: -moz-linear-gradient(center bottom , #b43434, #ea5656) repeat scroll 0 0 transparent;
-  background: -moz-radial-gradient(center center 45deg, circle closest-side, #ea5656 0%, #7b3232 100%) repeat scroll 0 0 transparent;
-  font-size:18px; 
-  font-weight:bolder; 
-  color:white; 
+  -moz-border-radius:100%;
+  line-height:12px;
+  font-size:18px;
+  font-weight:bolder;
+  color:white;
   text-shadow: 0px -1px 0px #474747;
 }
 
-div.statusbar_row span.status_ok {
-  margin-right:5px;
-  display:inline-block; 
-  width:12px; 
-  height:12px; 
-  padding:4px; 
-  border:none; 
-  vertical-align:middle;
-  -moz-border-radius:100%;  
-  line-height:12px; 
-  background: -moz-linear-gradient(center bottom , #25712e, #59c766) repeat scroll 0 0 transparent;   
+.status_warning {
+  background: -moz-linear-gradient(center bottom , #b43434, #ea5656) repeat scroll 0 0 transparent;
+  background: -moz-radial-gradient(center center 45deg, circle closest-side, #ea5656 0%, #7b3232 100%) repeat scroll 0 0 transparent;
+}
+
+.status_ok {
+  background: -moz-linear-gradient(center bottom , #25712e, #59c766) repeat scroll 0 0 transparent;
   background: -moz-radial-gradient(center center 45deg, circle closest-side, #59c766 0%, #25712e 100%) repeat scroll 0 0 transparent;
-  
-  font-size:18px; 
-  font-weight:bold; 
-  color:white; 
-  text-shadow: 0px -1px 0px #474747;
-  text-align:center;
 }
 
 #favorites { border-color: #eee; }
+
